--- a/arayuzler/kayit.ui
+++ b/arayuzler/kayit.ui
@@ -272,6 +272,35 @@ border-radius: 10px;</string>
      </property>
     </widget>
    </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>20</y>
+      <width>101</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Maiandra GD</family>
+      <pointsize>14</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(131, 65, 0);
+font: 14pt &quot;Maiandra GD&quot;;
+border-radius: 10px;
+border-color: rgb(132, 66, 0);
+border-size: 10pt;</string>
+    </property>
+    <property name="text">
+     <string>&lt;- Geri</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
